--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fastify/cors": "^9.0.1",
         "dotenv": "^16.4.5",
         "fastify": "^4.27.0",
-        "mongoose": "^8.4.0"
+        "mongoose": "^8.4.0",
+        "zod": "^3.23.8"
     }
 }
