--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "tsx watch ./src/server.ts",
+        "dev": "tsx watch ./src/index.ts",
         "format": "prettier --write ."
     },
     "keywords": [],
@@ -12,6 +12,7 @@
     "description": "",
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.21",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.12.12",
         "prettier": "^3.2.5",
@@ -19,9 +20,8 @@
         "typescript": "^5.4.5"
     },
     "dependencies": {
-        "@fastify/cors": "^9.0.1",
         "dotenv": "^16.4.5",
-        "fastify": "^4.27.0",
+        "express": "^4.19.2",
         "mongoose": "^8.4.0",
         "zod": "^3.23.8"
     }
